# wake-word-benchmarks

./: .gitignore  README.md  benchmark.py  download_test_data.py  models.py  pyproject.toml
.github/workflows/: ci.yml
models/: __init__.py  base.py  micro_wake_word.py  open_wake_word.py
