[project]
name = "wake-word-benchmarks"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8,<3.13"
license = { text = "MIT" }
dependencies = [
    "tensorflow==2.18.0",
    "openwakeword==0.6.0",
    "numpy==2.0.2",
    "scipy==1.15.1",
    "tqdm==4.67.1",
    "onnxruntime==1.20.1"
]

[tool.setuptools.dependency-overrides]
"tflite-runtime" = { version = "*", markers = "False" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["benchmark", "models", "download_test_data"]
